fix: keep mobile sidebar overlays from shifting content

--- a/src/components/ChatView/styling/ChatView.scss
+++ b/src/components/ChatView/styling/ChatView.scss
@@ -1,6 +1,9 @@
 .str-chat {
   --str-chat-selector-background-color: var(--str-chat__secondary-background-color);
   --str-chat-selector-border-color: var(--border-core-subtle);
+  --str-chat__chat-view-selector-mobile-width: calc(
+    var(--spacing-md) + var(--spacing-md) + var(--spacing-xs) + var(--spacing-xs) + 20px
+  );
 
   --str-chat-selector-button-color-default: var(--str-chat__text-low-emphasis-color);
   --str-chat-selector-button-color-selected: var(--str-chat__text-color);
@@ -12,6 +15,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  position: relative;
 
   .str-chat__chat-view__selector {
     display: flex;
@@ -29,6 +33,11 @@
 
       &.str-chat__chat-view__selector--nav-open {
         display: flex;
+        inset-block: 0;
+        inset-inline-start: 0;
+        position: absolute;
+        width: var(--str-chat__chat-view-selector-mobile-width);
+        z-index: 2;
       }
     }
 
@@ -111,10 +120,14 @@
   .str-chat__chat-view__channels {
     display: flex;
     flex-grow: 1;
+    min-width: 0;
+    position: relative;
   }
 
   .str-chat__chat-view__threads {
     display: flex;
     flex-grow: 1;
+    min-width: 0;
+    position: relative;
   }
 }
